# wsup

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  installer.iss
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/core/: cli.rs  mod.rs  process.rs  projects.rs
src/ui/: app.rs  mod.rs  render.rs
src/utils/: mod.rs
