[package]
name = "wsup"
version = "0.1.3"
edition = "2021"
authors = ["NotKiwy"]
description = "A beautiful TUI localhost process manager with real-time graphs"
license = "MIT"
repository = "https://github.com/NotKiwy/wsup"
homepage = "https://github.com/NotKiwy/wsup"
readme = "README.md"
keywords = ["cli", "terminal", "process", "port", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wsup"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
